--- a/style.css
+++ b/style.css
@@ -286,20 +286,6 @@ header {
   justify-content: space-evenly;
   margin-bottom: 3.4rem;
 }
-.flex {
-  display: flex;
-  align-items: center;
-  padding-bottom: 5.2rem;
-  gap: 2rem;
-}
-.grid {
-  display: grid;
-  column-gap: 1rem;
-  /* row-gap: 9.6rem; */
-}
-.grid--3-cols {
-  grid-template-columns: repeat(3, 1fr);
-}
 
 .product-box {
   background: #f7f7f7;
@@ -375,11 +361,15 @@ header {
 
 .special-img-box {
   position: relative;
+  /* flex: 2;
+  min-width: 300px; */
 }
 .special-img {
   width: 100%;
-  border-radius: 9px;
+
+  border-radius: 10px;
 }
+
 .shop-now-btn:link,
 .shop-now-btn:visited {
   background-color: #222;
@@ -410,6 +400,16 @@ header {
   width: 130rem;
   margin: 0 auto;
 } */
+.image-grid-4-cols {
+  display: block;
+
+  width: 100%;
+
+  transition: filter 400ms, opacity 400ms, transform 500ms !important;
+}
+.image-grid-4-cols:hover {
+  transform: scale(1.1);
+}
 .image-box {
   max-width: 100%;
 }
@@ -443,9 +443,9 @@ header {
   font-size: 1.4rem;
 }
 .section-icon {
-  margin-bottom: 9.6rem;
+  margin-bottom: 2.2rem;
 }
-.icons-of-our-time {
+.icons-of-our-time-box {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -460,4 +460,31 @@ header {
   text-align: center;
   margin: 0 auto;
   letter-spacing: -0.6px;
+}
+.margin-bottom-sm {
+  margin-bottom: 3.4rem;
+}
+.best-offers-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 3.4rem;
+}
+.after-circle {
+  position: relative;
+}
+.after-circle::before {
+  content: "";
+  display: block;
+
+  position: absolute;
+  top: -20%;
+  right: -8%;
+  transform: translate(40%, -10%);
+  border-radius: 50%;
+  width: 35%;
+  background-color: #b2afef;
+  padding-bottom: 35%;
+  opacity: 0.2;
+  z-index: -1;
 }
